Closed
Bug 1480213
Opened 7 years ago
Closed 7 years ago
Preemptively fix unified bustage in layout/base
Categories
(Core :: CSS Parsing and Computation, defect, P3)
Core
CSS Parsing and Computation
Tracking
()
RESOLVED
FIXED
mozilla63
| Tracking | Status | |
|---|---|---|
| firefox63 | --- | fixed |
People
(Reporter: dholbert, Assigned: dholbert)
Details
Attachments
(1 file)
(Formerly: bug 1468590)
layout/base doesn't quite build successfully right now, when I disable unified builds (by doing s/UNIFIED_SOURCES/SOURCES/ in its moz.build file)
I get this build error (for a .cpp file in layout/base, though note that the problem is actually in a header that it pulls in from layout/style):
=====
In file included from ../../../mozilla/layout/base/nsPresContext.cpp:42:
../../../mozilla/layout/style/nsMediaFeatures.h:20:47: error: base class has incomplete type
struct nsCSSKeywordAndBoolTableEntry : public nsCSSKTableEntry {
=====
Filing this bug on fixing this. nsMediaFeatures.h is just missing an #include that it needs to provide the nsCSSKTableEntry definition.
| Assignee | ||
Updated•7 years ago
|
Priority: -- → P3
| Assignee | ||
Comment 1•7 years ago
|
||
Comment 2•7 years ago
|
||
Comment on attachment 8996847 [details]
Bug 1480213: Give nsMediaFeatures.h an include for nsCSSProps.h, to provide nsCSSKTableEntry type definition & fix non-unified build bustage. r?TYLin
Ting-Yu Lin [:TYLin] (UTC-7) has approved the revision.
https://phabricator.services.mozilla.com/D2628
Attachment #8996847 -
Flags: review+
Pushed by dholbert@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b62ca7339381
Give nsMediaFeatures.h an include for nsCSSProps.h, to provide nsCSSKTableEntry type definition & fix non-unified build bustage. r=TYLin
Comment 4•7 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
You need to log in
before you can comment on or make changes to this bug.
Description
•