Bug 1480213: Give nsMediaFeatures.h an include for nsCSSProps.h, to provide nsCSSKTableEntry type definition & fix non-unified build bustage. r=TYLin

Differential Revision: https://phabricator.services.mozilla.com/D2628